# index-tts-vLLM

./: .gitattributes  .gitignore  AGENTS.md  CODEX_TAKEOVER_PLAN_20260525.md  HANDOFF.md  LIGHTWEIGHT_ARCHITECTURE_20260525.md  MANIFEST.in  MASTER_PLAN_PHASE2_PLUS.md  QUICKSTART_TAVO.md  README.md  README_RELEASE.md  TAVO_API_REFERENCE_20260525.md  TAVO_INTEGRATION_PHASE1.md  TAVO_LLM_PROMPT_20260525.md  indextts2_api.py  patch_vllm.py  pyproject.toml  webui.py
Leon_api/: AGENTS.md  README.md  优化计划2.md
dev_workspace/: AGENTS.md  README.md
fast6g/: .gitignore  Git_Pull.bat  go-API.bat  go-webui-FP16.bat  indextts2_api.py  install_deepspeed.bat  uninstall_deepspeed.bat
indextts/: infer_v2.py  infer_vllm_v2.py  llm_proxy.py  voice_library.py
launcher/: LEON-Launcher.bootstrap.cs  LEON-Launcher.ps1  LeonNativeLauncher.cs
launcher-tauri/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
launcher-tauri/src-tauri/: .gitignore  Cargo.toml  README.md  setup.bat  tauri.conf.json
launcher-tauri/src-tauri/src/: main.rs
leon_common/: __init__.py  cache_contracts.py  llm_proxy.py  profile_config.py  prompt_render.py  voice_library.py
scripts/: restart-leon-api.ps1  start-fast6g-api.bat  start-fast6g-webui.bat  start-vllm-api.bat  start-vllm-webui.bat
static/: s2mel_ab_test.html  tavo (2).js  tavo.js  tavo.runtime.js  tavo.runtime.manifest.json  tavo.ui.skin.default.css  tavo_widget_test.html  test.html
tools/: 400个火爆音色_rename_report.csv  build_voice_style_clips.py  restart_indextts_api.ps1
vllm/: .gitattributes  .gitignore  go-API-VLLM-NoQwen.bat  go-API-VLLM.bat  go-webui-VLLM-NoQwen.bat  go-webui-VLLM.bat  indextts2_api.py  webui.py
音色参考音频/: 甜妹.txt  风韵少妇 喘息声.txt
(+156 files in other folders)
