[package]
name = "leon-launcher-tauri"
version = "1.0.0"
description = "LEON TTS Launcher"
authors = ["LEON Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
encoding_rs = "0.8"
base64 = "0.22"
urlencoding = "2.1"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
